// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorList Container should render Default 1`] = `
<DocumentFragment>
  <article
    class="css-dp8k64-ArticleListWrapper ei1ca8h0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1a0h34g-MuiTypography-root-MuiLink-root-ArticleListItem"
      href="https://example.com"
    >
      <div
        class="css-14c86dg-ArticleListItemImageWrapper e1tp74qn1"
      >
        <img
          alt="DSC07717"
          class="css-q22r0e-ImageWrapper-ArticleListItem e1shv2yg0"
          height="6000"
          loading="lazy"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
          width="4000"
        />
      </div>
      <div
        class="css-1w8pg9w-ArticleListItemContent e1tp74qn0"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          01.01.2023 00:00
        </p>
        <h1
          class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
        >
          title
        </h1>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
        >
          von Foobar, Foobar
        </p>
      </div>
    </a>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1a0h34g-MuiTypography-root-MuiLink-root-ArticleListItem"
      href="https://example.com"
    >
      <div
        class="css-14c86dg-ArticleListItemImageWrapper e1tp74qn1"
      >
        <img
          alt="DSC07717"
          class="css-q22r0e-ImageWrapper-ArticleListItem e1shv2yg0"
          height="6000"
          loading="lazy"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
          width="4000"
        />
      </div>
      <div
        class="css-1w8pg9w-ArticleListItemContent e1tp74qn0"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          01.01.2023 00:00
        </p>
        <h1
          class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
        >
          title
        </h1>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
        >
          von Foobar, Foobar
        </p>
      </div>
    </a>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1a0h34g-MuiTypography-root-MuiLink-root-ArticleListItem"
      href="https://example.com"
    >
      <div
        class="css-14c86dg-ArticleListItemImageWrapper e1tp74qn1"
      >
        <img
          alt="DSC07717"
          class="css-q22r0e-ImageWrapper-ArticleListItem e1shv2yg0"
          height="6000"
          loading="lazy"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
          width="4000"
        />
      </div>
      <div
        class="css-1w8pg9w-ArticleListItemContent e1tp74qn0"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          01.01.2023 00:00
        </p>
        <h1
          class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
        >
          title
        </h1>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
        >
          von Foobar, Foobar
        </p>
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`AuthorList Container should render WithClassName 1`] = `
<DocumentFragment>
  <article
    class="extra-classname css-dp8k64-ArticleListWrapper ei1ca8h0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1a0h34g-MuiTypography-root-MuiLink-root-ArticleListItem"
      href="https://example.com"
    >
      <div
        class="css-14c86dg-ArticleListItemImageWrapper e1tp74qn1"
      >
        <img
          alt="DSC07717"
          class="css-q22r0e-ImageWrapper-ArticleListItem e1shv2yg0"
          height="6000"
          loading="lazy"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
          width="4000"
        />
      </div>
      <div
        class="css-1w8pg9w-ArticleListItemContent e1tp74qn0"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          01.01.2023 00:00
        </p>
        <h1
          class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
        >
          title
        </h1>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
        >
          von Foobar, Foobar
        </p>
      </div>
    </a>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1a0h34g-MuiTypography-root-MuiLink-root-ArticleListItem"
      href="https://example.com"
    >
      <div
        class="css-14c86dg-ArticleListItemImageWrapper e1tp74qn1"
      >
        <img
          alt="DSC07717"
          class="css-q22r0e-ImageWrapper-ArticleListItem e1shv2yg0"
          height="6000"
          loading="lazy"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
          width="4000"
        />
      </div>
      <div
        class="css-1w8pg9w-ArticleListItemContent e1tp74qn0"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          01.01.2023 00:00
        </p>
        <h1
          class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
        >
          title
        </h1>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
        >
          von Foobar, Foobar
        </p>
      </div>
    </a>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1a0h34g-MuiTypography-root-MuiLink-root-ArticleListItem"
      href="https://example.com"
    >
      <div
        class="css-14c86dg-ArticleListItemImageWrapper e1tp74qn1"
      >
        <img
          alt="DSC07717"
          class="css-q22r0e-ImageWrapper-ArticleListItem e1shv2yg0"
          height="6000"
          loading="lazy"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
          width="4000"
        />
      </div>
      <div
        class="css-1w8pg9w-ArticleListItemContent e1tp74qn0"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          01.01.2023 00:00
        </p>
        <h1
          class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
        >
          title
        </h1>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
        >
          von Foobar, Foobar
        </p>
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`AuthorList Container should render WithEmotion 1`] = `
<DocumentFragment>
  <article
    class="css-dp8k64-ArticleListWrapper ei1ca8h0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1a0h34g-MuiTypography-root-MuiLink-root-ArticleListItem"
      href="https://example.com"
    >
      <div
        class="css-14c86dg-ArticleListItemImageWrapper e1tp74qn1"
      >
        <img
          alt="DSC07717"
          class="css-q22r0e-ImageWrapper-ArticleListItem e1shv2yg0"
          height="6000"
          loading="lazy"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
          width="4000"
        />
      </div>
      <div
        class="css-1w8pg9w-ArticleListItemContent e1tp74qn0"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          01.01.2023 00:00
        </p>
        <h1
          class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
        >
          title
        </h1>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
        >
          von Foobar, Foobar
        </p>
      </div>
    </a>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1a0h34g-MuiTypography-root-MuiLink-root-ArticleListItem"
      href="https://example.com"
    >
      <div
        class="css-14c86dg-ArticleListItemImageWrapper e1tp74qn1"
      >
        <img
          alt="DSC07717"
          class="css-q22r0e-ImageWrapper-ArticleListItem e1shv2yg0"
          height="6000"
          loading="lazy"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
          width="4000"
        />
      </div>
      <div
        class="css-1w8pg9w-ArticleListItemContent e1tp74qn0"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          01.01.2023 00:00
        </p>
        <h1
          class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
        >
          title
        </h1>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
        >
          von Foobar, Foobar
        </p>
      </div>
    </a>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1a0h34g-MuiTypography-root-MuiLink-root-ArticleListItem"
      href="https://example.com"
    >
      <div
        class="css-14c86dg-ArticleListItemImageWrapper e1tp74qn1"
      >
        <img
          alt="DSC07717"
          class="css-q22r0e-ImageWrapper-ArticleListItem e1shv2yg0"
          height="6000"
          loading="lazy"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
          width="4000"
        />
      </div>
      <div
        class="css-1w8pg9w-ArticleListItemContent e1tp74qn0"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          01.01.2023 00:00
        </p>
        <h1
          class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
        >
          title
        </h1>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
        >
          von Foobar, Foobar
        </p>
      </div>
    </a>
  </article>
</DocumentFragment>
`;
